--- a/node-be/package.json
+++ b/node-be/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.1",
     "elysia": "latest"
   },
   "devDependencies": {
